ukui-settings-daemon (3.1.0-1.8) v101; urgency=medium
 
  * BUG号：83664 【OSD】【mips】【PTOF】接双屏，使用win+p切换，无法打开切换显示模式OSD界面
  * 需求号：无
  * 其他改动说明：无

 -- sundagao <sundagao@kylinos.cn>  Fri, 15 Oct 2021 15:43:51 +0800

ukui-settings-daemon (3.1.0-1.7) v101; urgency=medium

  * BUG号：85307【PTOF】【键盘】通过快捷键ctrl+alt+p无法打开护眼中心
  * 需求号：无
  * 其他改动说明：无  

 -- chenxiaohui <chenxiaohui@kylinos.cn>  Thu, 14 Oct 2021 19:57:02 +0800

ukui-settings-daemon (3.1.0-1.6) v101; urgency=medium

  * BUG号：79767 【显示】开机时不连接显示器，开机后连接显示器，屏幕黑屏
  * 需求号：无
  * 其他改动说明：增加本地资源图标，在主题图标获取不到时，从本地获取

 -- sundagao <sundagao@kylinos.cn>  Wed, 13 Oct 2021 18:30:48 +0800

ukui-settings-daemon (3.1.0-1.5) v101; urgency=medium

  * BUG号：83527 【PTOF】【显示】win+p设置双屏为扩展模式后副屏一直显示黑屏状态
           83521 【控制面板|触摸板】开启“打字时禁用触摸板”，插入鼠标再拔出，此时“打字时禁用触摸板”功能失效，重新关开功能恢复正常
           75491 【双屏】笔记本外接一个hdmi4K屏，设置为第一屏，进行热插拔会变为镜像模式
  * 需求号：无
  * 其他改动说明：修复媒体Next按键不生效问题
 -- sundagao <sundagao@kylinos.cn>  Tue, 12 Oct 2021 14:33:34 +0800

ukui-settings-daemon (3.1.0-1.4) v101; urgency=medium

  * BUG号： 78070 【USD】本地用户注销重登产生core文件 
            84521 【PTOF】【键盘】在桌面上按f3/f4调节屏幕亮度，亮度值只能在当前值上下浮动10个值间进行调节，在控制面板和侧边栏可以正常调节亮度。（必现） 
            84488 【声音】x390笔记本使用快捷键调节声音，声音调到18的时候进度条还是显示的0 
            84486 【电源管理】x390笔记本无法使用快捷键调节亮度 
            84418 【UKUI V3.1】【Intel0923版本】长按F3/F4不能连续调节系统亮度,需要等待2S才能改变亮度等级（必现） 
            84406 【UKUI V3.1】【Intel0923版本】通过快捷键调节屏幕亮度，当亮度等级为100时,亮度值显示不完全（必现） 
            83959 【双屏】【PTOF】【联想CF4620Z】设置扩展模式，高清屏起不来，且控制面板显示的镜像模式 
            83937 【UKUI V3.1】【OSD】笔记本将vga设置为主屏，HDMI为副屏后，选择仅显示第二屏幕后，HDMI的屏幕黑屏，仅有鼠标 
            68941 【控制面板】开启打字时禁用触摸板，键盘输入停止后立刻使用触摸板，此时触摸板不会恢复使用，抬起后再次使用触摸板正常（如果键盘停止输入后等待一会再使用触摸板则正常） 
            75491 【双屏】笔记本外接一个hdmi4K屏，设置为第一屏，进行热插拔会变为镜像模式 
            83324 【双屏】【4k】连接双屏，扩展模式下，扩展屏显示异常，包含部分主屏的内容  
  *需求号：无
  *其他改动说明：无 

 -- sundagao <sundagao@kylinos.cn>  Mon, 11 Oct 2021 10:10:02 +0800

ukui-settings-daemon (3.1.0-1.3) v101; urgency=medium
